--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -13,4 +13,8 @@ dependencies {
 
     // Coroutines Core
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
+    implementation project(path: ':data')
+    implementation project(path: ':data')
+    implementation project(path: ':data')
+    implementation project(path: ':data')
 }
