--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation project(path: ':data')
+    implementation project(path: ':domain')
+    implementation project(path: ':domain')
+    implementation project(path: ':domain')
+    implementation project(path: ':domain')
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -98,6 +102,7 @@ dependencies {
 
     // DataStore
     implementation 'androidx.datastore:datastore-preferences:1.0.0-rc02'
+    implementation("androidx.datastore:datastore:1.0.0-rc02")
 
     // Dots Indicator
     implementation 'com.github.tizisdeepan:dots:1.0.1'
