--- a/data/build.gradle
+++ b/data/build.gradle
@@ -58,6 +58,7 @@ dependencies {
 
     // DataStore
     implementation 'androidx.datastore:datastore-preferences:1.0.0-rc02'
+    implementation("androidx.datastore:datastore:1.0.0-rc02")
 
     // Coroutines Core
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0'
